# chart_cyanvas

./: .dockerignore  .env.build  .env.example  .env.prod.example  .env.test  .gitattributes  .gitignore  .rubocop.yml  :  Cargo.toml  Gemfile  Makefile  Procfile  README.md  Rakefile  biome.jsonc  config.dev.yml  config.prod.yml  config.schema.yml  config.test.yml  crowdin.yml  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  hosting.md  nginx-builder.rb  nginx.base.conf  nginx.conf  nginx.conf.base  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/actions/merge/: action.yml
.github/actions/meta/: action.yml
.github/workflows/: backend-check.yml  backend-lint.yml  build-all.yml  build.yml  frontend-check.yml  frontend-lint.yml  sub-audio-build.yml  sub-audio-check.yml  sub-audio-lint.yml  sub-chart-check.yml  sub-image-check.yml  sub-image-lint.yml  sub-sus-check.yml  sub-sus-lint.yml  sub-temp-storage-check.yml  wiki-check.yml
backend/: .gitignore  .rubocop.yml  Dockerfile  Gemfile  Rakefile  falcon.rb  init.sh  preload.rb  start.sh
backend/app/controllers/: application_controller.rb  frontend_controller.rb  sonolus_controller.rb  temporary_file_controller.rb
backend/app/jobs/: all_chart_convert_job.rb  all_sus_convert_job.rb  application_job.rb  bgm_convert_job.rb  chart_convert_job.rb  image_convert_job.rb  publish_chart_job.rb  sus_convert_job.rb
backend/app/models/: application_record.rb  chart.rb  co_author.rb  file_resource.rb  like.rb  tag.rb  user.rb  user_warning.rb
backend/assets/backgrounds/: BackgroundConfiguration  BackgroundData  BackgroundImage  BackgroundThumbnail  pjsekai-old.yml  pjsekai.yml
backend/assets/effects/: EffectAudio  EffectData  pjsekai-fixed.yml
backend/assets/engines/: EngineConfiguration  EngineData  EnginePlayData  EnginePreviewData  EngineTutorialData  EngineWatchData  pjsekai-extended.yml
backend/assets/particles/: ParticleData  ParticleTexture  pjsekai-v1.yml  pjsekai-v3.yml  pjsekai.yml
backend/assets/skins/: SkinData  SkinTexture  SkinThumbnail  pjsekai-extended-01.yml  pjsekai-extended-02.yml  pjsekai-extended.yml
backend/config/: application.rb  boot.rb  credentials.yml.enc  database.yml  environment.rb  puma.rb  routes.rb  sonolus_key.pub  sonolus_public_key.pub  storage.yml
backend/config/environments/: development.rb  production.rb  test.rb
backend/config/initializers/: discord.rb  filter_parameter_logging.rb  logger.rb  logging.rb  opentelemetry.rb  redis.rb  sentry.rb  sidekiq.rb
backend/config/locales/: en.yml  fr.yml  ja.yml  ru.yml
backend/db/: schema.rb  seeds.rb
backend/db/migrate/: 20221201110009_create_active_storage_tables.active_storage.rb  20221201110139_create_file_resources.rb  20221201110230_create_users.rb  20221201111756_create_charts.rb  20221201113053_create_co_authors.rb  20221201124442_add_column_to_chart.rb  20221202093051_remove_non_null_validation_from_chart.rb  20221202093904_add_chart_to_file_resource.rb  20221202095335_remove_non_null_validation_from_file_resource.rb  20221202122354_rebuild_chart.rb  20221202130458_add_colors_to_user.rb  20221204021852_add_composer_field_to_chart.rb  20221204034224_create_likes.rb  20221204102615_remove_unique_from_user_name.rb  20221211133117_add_owner_to_users.rb  20221211141138_add_author_name_to_chart.rb  20221213112951_change_variant_column_in_chart.rb  (+26 more)
backend/lib/: discord_request.rb  temporary_file.rb
backend/public/: robots.txt
backend/spec/: rails_helper.rb  spec_helper.rb
backend/test/: test_helper.rb
frontend/: .eslintrc.js  .eslintrc.json  .gitignore  .prettierrc.json  Dockerfile  build-config.env  build.sh  i18n.js  middleware.ts  next.config.js  package.json  pnpm-lock.yaml  react-router.config.ts  remix-env.d.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json  unocss.config.ts  vite.config.ts  yaml.d.ts
frontend/@types/: data.d.ts  yml.d.ts
frontend/app/: admin.tsx  charts.$name.edit.tsx  entry.client.tsx  entry.server.tsx  login.tsx  root.tsx
frontend/components/: AdminWarnModal.tsx  Budoux.tsx  ChartCard.tsx  ChartForm.tsx  ChartList.tsx  ChartSection.tsx  Checkbox.tsx  DisablePortal.tsx  FileInput.tsx  FileUploadButton.tsx  Footer.tsx  Header.tsx  InputTitle.tsx  ModalPortal.tsx  NumberInput.tsx  OptionalImage.tsx  RadioButton.tsx  RangeInput.tsx  ScheduleInput.tsx  Select.tsx  SettingsDialog.tsx  SideMenu.tsx  SonolusAvatar.tsx  TextInput.tsx  Tooltip.tsx
frontend/i18n/: en.yml  fr.yml  ja.yml  ru.yml
frontend/lib/: atom.ts  chart.ts  config.server.ts  contexts.ts  i18n.server.ts  i18n.ts  index.ts  languageNames.macro.ts  requireLogin.tsx  translations.ts  types.ts  useLocalId.ts  useLogin.ts  useRandomValue.ts  utils.ts
frontend/pages/: _app.tsx  _document.tsx  admin.tsx  index.tsx  login.tsx  middleware.ts
frontend/patches/: @fluentui__react-icons@2.0.253.patch  @griffel__core@1.18.0.patch
frontend/styles/: globals.scss  markdown.scss  reset.css  tailwind.css
patches/: @fluentui__react-icons.patch
sub-audio/: Cargo.toml  Dockerfile  main.py  pyproject.toml  test_main.py
sub-audio/src/: main.rs
sub-chart/: .prettierrc.json  Dockerfile  build.ts  jest.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
sub-chart/src/: index.ts  server.ts
sub-image/: .gitignore  Cargo.toml  Dockerfile  conftest.py  main.py  pyproject.toml  test_main.py
sub-image/src/: main.rs  models.rs  result.rs  routes.rs
sub-sus/: .eslintrc.json  Dockerfile  build-config.env  build.ts  index.ts  jest.config.ts  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
sub-sus/src/: index.ts
sub-temp-storage/: Cargo.toml  Dockerfile
sub-temp-storage/src/: main.rs  models.rs  result.rs  routes.rs
tasks/: package.json  pnpm-lock.yaml  tsconfig.json
tasks/src/: common.ts  env.ts  registerRoleConnection.ts  sendWarningChannelInfo.ts
wiki/: .gitignore  Dockerfile  nginx.conf  package.json
wiki/docs/: donation.md  sus-extended-features.md
(+87 files in other folders)
