[workspace]
members = ["sub-image", "sub-temp-storage"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.98"
axum = { version = "0.6.20", features = ["macros"] }
thiserror = "1.0.69"

tokio = { version = "1.47.1", features = ["rt-multi-thread", "full"] }
tokio-util = { version = "0.7.15", features = ["io"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

tower-http = { version = "0.4.4", features = ["trace", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

reqwest = { version = "0.11.27", default-features = false, features = [
  "rustls-tls",
] }

tempfile = "3.20.0"

uuid = { version = "1.17.0", features = ["v4"] }

rstest = "0.18.2"

dotenv = "0.15.0"
