[package]
name = "sub-audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0.152", features = ["derive"] }
dotenv = "0.15.0"
tokio = { version = "1.23.0", features = ["fs"] }
env_logger = "0.9.0"
once_cell = "1.17.0"
reqwest = "0.11.13"
tempfile = "3.3.0"
rand = "0.8.5"
log = "0.4.17"
tokio-util = "0.7.4"
