[tool.poetry]
name = "sub-image"
version = "0.1.0"
description = ""
authors = ["sevenc-nanashi <sevenc7c@sevenc7c.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.0"
poethepoet = "^0.17.1"
aioredis = "^2.0.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.12.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39']
line-length = 120

[tool.poe.tasks]
start = "gunicorn -w 2 -k uvicorn.workers.UvicornWorker -b 0.0.0.0:3203 main:app"
dev = "uvicorn main:app --reload --port 3203"
lint-black = "black . --check"
lint-isort = "isort . --check-only"
lint = ["lint-black", "lint-isort"]
format-black = "black ."
format-isort = "isort ."
format = ["format-black", "format-isort"]
test = "pytest"
