[project]
name = "sub-audio"
version = "0.1.0"
description = ""
authors = [{ name = "sevenc-nanashi", email = "sevenc7c@sevenc7c.com" }]
dependencies = [
    "fastapi>=0.114.1",
    "uvicorn>=0.30.6",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.0.1",
    "redis>=5.0.8",
    "sentry-sdk>=2.14.0",
]
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
    "httpx>=0.27.2",
    "ruff>=0.6.4",
]

[tool.rye.scripts]
test = "pytest"
lint = "ruff lint"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sub_audio"]

