[project]
name = "sub-audio"
version = "0.1.0"
description = ""
authors = [{ name = "sevenc-nanashi", email = "sevenc7c@sevenc7c.com" }]
dependencies = [
  "fastapi>=0.114.1",
  "uvicorn>=0.30.6",
  "gunicorn>=23.0.0",
  "python-dotenv>=1.0.1",
  "redis>=5.0.8",
  "sentry-sdk>=2.14.0",
  "taskipy>=1.14.1",
  "aiohttp>=3.12.15",
]
requires-python = ">= 3.12"

[dependency-groups]
dev = ["pytest>=8.3.3", "httpx>=0.27.2", "ruff>=0.6.4"]

[tool.taskipy.tasks]
start = "gunicorn -w 2 -k uvicorn.workers.UvicornWorker -b 0.0.0.0:3202 main:app"
dev = "uvicorn main:app --reload --port 3202"
lint = "ruff check ."
test = "pytest"
