[package]
name = "sub-image"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
pjsekai-background-gen-core = { git = "https://github.com/sevenc-nanashi/pjsekai-background-gen-rust", branch = "main" }
reqwest.workspace = true
image = "0.24.9"
tempfile.workspace = true
uuid.workspace = true
dotenv.workspace = true
rstest.workspace = true
