[package]
name = "sub-temp-storage"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile.workspace = true
uuid.workspace = true
dotenv.workspace = true
rstest.workspace = true
